Fixes: filters gap, card image, label icon positioning

--- a/less/components/consonant/card.less
+++ b/less/components/consonant/card.less
@@ -48,7 +48,7 @@
         width: 100%;
         height: @consonant-card-img-heigh;
         background-color: @consonant-color-lightest-grey;
-        background-position: 0 100%;
+        background-position: 50% 50%;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -174,7 +174,13 @@
 
     .consonant-card--banner {
         position: absolute;
-        display: block;
+
+        &:extend(
+            .flex,
+            .flex .justify .start,
+            .flex .align .center
+        );
+
         max-width: 80%;
         max-height: 70%;
         top: unit((@consonant-root-rem * 2), px);
@@ -199,6 +205,10 @@
         background-color: @consonant-color-blue;
         user-select: none;
         overflow-y: auto;
+
+        img {
+            margin-right: 2/@consonant-root-rem;
+        }
     }
 
     @media @for-tablet-landscape-up {
