--- a/less/components/consonant/filters.less
+++ b/less/components/consonant/filters.less
@@ -676,6 +676,7 @@
                 }
 
                 .consonant-filters--item-list {
+                    min-height: unset;
                     border-color: transparent;
                 }
 
